# FastAPI-Jaeger

./: ReadME.md  docker-compose.dev.yml  docker-compose.local.yml  otel-collector-config-connector.yml
backend/: Makefile  pyproject.toml
backend/alembic/versions/: 4908bf4c24cb_initial_migration.py
backend/app/: config.py  server.py
backend/app/database/: config.py
backend/app/jaeger/: metrics.py  tracing.py
backend/app/router/user/: router.py
backend/app/util/: logging.py
